--- a/user/.gitignore
+++ b/user/.gitignore
@@ -147,7 +147,7 @@ ipython_config.py
 .pdm.toml
 .pdm-python
 .pdm-build/
-
+data
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
